# glommactor

./: Cargo.toml  README.md
.github/workflows/: xtask.yml
benches/: actors.rs
examples/priority/: main.rs
examples/simple/: main.rs
examples/supervised_simple/: main.rs
examples/supervisor_core/: main.rs
src/: actor.rs  channel.rs  error.rs  handle.rs  lib.rs  supervisor.rs
xtask/: Cargo.toml
xtask/src/: main.rs
