[package]
name = "glommactor"
version = "0.1.0"
authors = ["Alexandra Clifford <a13xandra.cliff0rd@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = "2.0.9"
futures = "0.3.31"
glommio = { version = "0.9.1", git="https://github.com/nand-nor/glommio", rev="bf0c68d"}
flume = {version= "0.11.1", features=["async"]}
async-trait = "0.1.83"
tracing = {version = "0.1.41"}

[dev-dependencies]
tracing-subscriber = { version="0.3.0"}
async-broadcast = "0.7.2"

[[example]]
name = "simple"

[[example]]
name = "supervised_simple"

[[example]]
name = "supervisor_core"